# scanner_evaluation

./: .gitignore  README.md  pyproject.toml
evals/: hf_data_code.ipynb
evals/hf_data/terminal-bench-2.0/: scout.yaml
