[project]
name = "scanner-evaluation"
version = "0.1.0"
description = "Research code for scanner-based benchmark evaluation workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.71.0",
    "datasets>=4.5.0",
    "huggingface-hub>=0.35.0",
    "instructor>=1.14.5",
    "inspect-ai>=0.3.179",
    "inspect-evals @ git+https://github.com/UKGovernmentBEIS/inspect_evals@main",
    "inspect-scout @ git+https://github.com/meridianlabs-ai/inspect_scout@main",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.6",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.0",
    "openai>=2.0",
    "plotly>=6.5.2",
    "pydantic>=2.11.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shortuuid>=1.0.13",
    "tabulate>=0.9.0",
]

[tool.uv]
package = false
